--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,16 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/leaflet": "^1.9.21",
     "@types/node": "^25.2.3",
     "@types/react": "^19.2.14",
-    "leaflet": "^1.9.4",
     "next": "^16.1.6",
     "postcss": "^8.5.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-leaflet": "^5.0.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   }
